yoshimi 2.0.2M

2021-7-25 Will
* Small cleanups and doc updates.
* Started CCs/NRPNs on user guide.
* BugFix: not responding to NRPN sys/ins effects.

2021-7-21 Will
* Further updates to User guide
* Added FLTK_event_keys.txt to dev_notes

2021-7-18 Will
* User guide formant filter done except graph usage.

2021-7-17 Will
* Initialised LearnBlock in MIDIlearn.
* Capitalised some GUI filter/effects control names.
* Corrected spelling in User Guide.
  Also made small additions and adjustments.

2021-7-15 Will
* Implemented Effects BPM control for CLI.
* Updated Effects in new user guide.

* Refined and unified BPM reporting.

2021-7-14 Will
* Merged in Effects BPM control from Kristian.
* Adjusted to CLI waveform list.
* Added (disabled) command block reporting in
  Interchange->resolveReplies()
* Started work on User Guide Envelopes and LFOs.

2021-7-1 Hermann
* New Feature: support for automated tests via CLI.

2021-6-29 Will
* BugFix: Loading state not adding to history.

2021-6-25 Will
* BugFix: headers still including jack/ringbuffer.
  Only appears in jack engine midi struct but
  doesn't seem to do anything!
  Replaced with uint_t

2021-6-22 Will
* Waveform in guide mostly done.
  There is a lot of detail missing.
  It was never   doccumented :(

2021-6-21 Will
* BugFix: GUI scale kemap label not resizing.
* Completed Scales in guide.

2021-6-20 Will
* Small improvement to vector and midi learn in guide.
* Completed Resonance in guide.

2021-6-19 Will
* Filer now correctly sets default path in favorites.
* Small doc cleanups.
* Improved PadSynth Base Type layout.
  Profile menu named.

* Added further details to filer in manual.
* Various small adjustments and spelling checks.
* Added new PadSynth image.

2021-6-17 Will
* Manual now points to correct version.
* Prepared for minor release.
* Set release version to 2.0.2

2021-6-14 Will
* Moved examples directory into doc.
  Required by debian.

2021-6-13 Will