@@ -4,7 +4,7 @@ BUG! If jack is selected for audio but there are no physical ports Yoshimi quits
 
 BUG! stand-alone GUI freezes and no further system changes if new instance started while instrument change in progress.
 
-BUG! large buff        er sizes progressively chop off the first part of note attack.
+BUG! large buffer sizes progressively chop off the first part of note attack.
 
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
