@@ -1,5 +1,8 @@
 yoshimi 2.0.2M
 
+2021-7-26 Will
+* Completed user guide CCs/NRPNs
+
 2021-7-25 Will
 * Small cleanups and doc updates.
 * Started CCs/NRPNs on user guide.
